--- a/themes/cocoa/layouts/partials/header.html
+++ b/themes/cocoa/layouts/partials/header.html
@@ -11,8 +11,8 @@
             <a href="/"><div class="name">{{ .Site.Params.Author }}</div></a>
             <nav>
                 <ul>
-                    <a href="/blog/"><li>Blog</li></a>
-                    <a href="/about/"><li>About</li></a>
+                    <li><a href="/blog/">Blog</a></li>
+                    <li><a href="/about/">About</a></li>
                 </ul>
             </nav>
         </div>
