--- a/themes/cocoa/dev/less/markdown.less
+++ b/themes/cocoa/dev/less/markdown.less
@@ -24,7 +24,7 @@ h2 {
 }
 
 h3 {
-    font-size: 1em;
+    font-size: 1rem;
     margin-bottom: 1rem;
 }
 
@@ -32,7 +32,6 @@ h4, h5, h6 {
     font-size: 1rem;
     margin-bottom: 1rem;
     letter-spacing: none;
-    text-transform: none;
 }
 
 // 
@@ -41,7 +40,7 @@ h4, h5, h6 {
 
 code, pre {
     font-family: @monospace-font-stack;
-    font-size: 0.98rem;
+    font-size: 1rem;
     background-color: @background-gray;
 }
 
@@ -65,9 +64,9 @@ pre {
 }
 
 pre code {
-    /* enclosed by 4 backticks (````) */
+    /* enclosed by 3 backticks (```) */
     padding: 0;
-    font-size: 0.9rem;
+    font-size: 1rem;
 }
 
 a code {
@@ -111,12 +110,20 @@ ul {
     margin-bottom: 1.25rem;
 }
 
-li {
+ul li {
     list-style-type: disc;
-    list-style-position: inside;
 }
 
-// Miscenllaneous
+ol li {
+    list-style-type: decimal;
+}
+
+li {
+    list-style-position: outside;
+    margin-left: 1em;
+}
+
+// Miscellaneous
 
 em {
     font-style: italic;
