--- a/themes/cocoa/layouts/blog/single.html
+++ b/themes/cocoa/layouts/blog/single.html
@@ -9,25 +9,40 @@
                     <div class="initials"><a href="{{ .Site.BaseURL }}">{{ .Site.Params.Initials }}</a></div>
                 </div>
                 <div class="meta">
-                    <div class="date" title="{{ .Date.Format .Site.Params.DateFormFull }}">{{ .Date.Format .Site.Params.DateForm }}</div>
-                    <div class="reading-time"><div class="middot"></div>{{ if eq 1 .ReadingTime }}{{ .ReadingTime }} minute read{{ else }}{{ .ReadingTime }} minutes read{{ end }}</div>
+                    {{ if and .Site.Params.dateformfull .Site.Params.dateform }}
+                    <div class="date" title='{{ .Date.Format .Site.Params.dateformfull }}'>{{ .Date.Format .Site.Params.dateform }}</div>
+                    {{ else }}
+                    <div class="date" title='{{ .Date.Format "Mon Jan 2 2006 15:04:05 MST" }}'>{{ .Date.Format "Jan 2, 2006" }}</div>
+                    {{ end }}
+                    {{ if not .Site.Params.noshowreadtime }}
+		    <div class="reading-time"><div class="middot"></div>{{ i18n "readingTime" .ReadingTime }}</div>
+                    {{ end }}
                 </div>
             </div>
             <div class="markdown">
                 {{ .Content }}
-                <p><a href="/blog/">Back to posts</a></p>
+                <br>
+		<p><a href="/blog/">{{ i18n "backToPosts" }}</a></p>
             </div>
-            <nav class="pagination-single">
-                {{ if .Next }}
-                  <span class="previous">&larr; <a href="{{ .Next.Permalink }}" rel="prev">{{ .Next.Title }}</a></span>
-                {{ end }}
-                {{ if .Prev }}
-                  <span class="next"><a href="{{ .Prev.Permalink }}" rel="next">{{ .Prev.Title }}</a> &rarr;</span>
-                {{ end }}
-            </nav>
+            <br>
             <div class="disqus">
                 {{ template "_internal/disqus.html" . }}
             </div>
+            {{ if .Site.Params.gitalk }}
+            <div id="gitalk-container"></div>
+            <script type="text/javascript">
+                const gitalk = new Gitalk({
+                  clientID: "{{ .Site.Params.gitalk_clientID }}",
+                  clientSecret: "{{ .Site.Params.gitalk_clientSecret }}",
+                  repo: "{{ .Site.Params.gitalk_repo }}",
+                  owner: "{{ .Site.Params.gitalk_owner }}",
+                  admin: {{ .Site.Params.gitalk_admin }},
+                  // facebook-like distraction free mode
+                  distractionFreeMode: true
+                })
+                gitalk.render('gitalk-container')
+            </script>
+            {{ end }}
         </div>
     </div>
 </section>
