--- a/themes/cocoa/layouts/partials/header.html
+++ b/themes/cocoa/layouts/partials/header.html
@@ -3,16 +3,35 @@
 
 {{ partial "head.html" . }}
 
-<body lang="{{ .Site.Params.Lang }}">
+<body lang="{{ .Site.Params.lang }}">
 
-<section class="header"> 
+<section class="header">
     <div class="container">
         <div class="content">
-            <a href="/"><div class="name">{{ .Site.Params.Author }}</div></a>
+            {{ if .Site.Params.gravatar }}
+            <a {{ printf "href=%q" ("/" | relLangURL) | safeHTMLAttr }}><img class="avatar" src="https://gravatar.com/avatar/{{ .Site.Params.gravatar }}?s=50" rcset="https://gravatar.com/avatar/{{ .Site.Params.gravatar }}?s=100 2x, https://gravatar.com/avatar/{{ .Site.Params.gravatar }}?s=150 3x, https://gravatar.com/avatar/{{ .Site.Params.gravatar }}?s=200 4x"></a>
+            {{ else if .Site.Params.avatar }}
+                {{ $.Scratch.Add "srcset" (slice (printf "%s 1x" (.Site.Params.avatar|absURL))) }}
+                {{ $directory := replaceRE "^(.*)/[^/]+$" "$1" .Site.Params.avatar }}
+                {{ $basename := replaceRE "^.*/([^./]+).*$" "$1" .Site.Params.avatar }}
+                {{ $extension := replaceRE "^.*/[^.]+\\.([^.]+)$" "$1" .Site.Params.avatar }}
+                {{ range (readDir (printf "static/%s" $directory)) }}
+                    {{ if findRE (printf "^%s-\\d+x\\.%s$" $basename $extension) .Name }}
+                        {{ $.Scratch.Add "srcset" (slice (replaceRE (printf "^(%s)-(\\d+x)\\.(%s)$" $basename $extension) (printf "%s/$1-$2.$3 $2" ($directory|absURL)) .Name)) }}
+                    {{ end }}
+                {{ end }}
+                {{ $srcset := delimit ($.Scratch.Get "srcset") "," }}
+                <a {{ printf "href=%q" ("/" | relLangURL) | safeHTMLAttr }}><img class="avatar" src="/{{ .Site.Params.avatar }}" {{ printf "srcset=%q" $srcset | safeHTMLAttr }}></a>
+            {{ end }}
+            <a href="/"><div class="name">{{ .Site.Params.author }}</div></a>
+            {{ if .Site.Params.selfintro }}
+              <h3 class="self-intro">{{ .Site.Params.selfintro }}</h3>
+            {{ end }}
             <nav>
                 <ul>
-                    <li><a href="/blog/">Blog</a></li>
-                    <li><a href="/about/">About</a></li>
+                    {{ range .Site.Menus.main }}
+                        <li class="nav-{{ .Identifier }}"><a href="{{ .URL | absLangURL }}">{{ .Pre }}<span>{{ .Name }}</span></a></li>
+                    {{ end }}
                 </ul>
             </nav>
         </div>
@@ -23,40 +42,49 @@
     <div class="container">
         <div class="content">
 
-        {{ if .Site.Params.GitHub }}
-            <a href="{{ .Site.Params.GitHub }}" target="_blank">
-                <i class="icon ion-social-github"></i>
-            </a>
-        {{ end }}
-        
-        {{ if .Site.Params.Twitter }}
-            <a href="{{ .Site.Params.Twitter }}" target="_blank">
-                <i class="icon ion-social-twitter"></i>
-            </a>
+        {{ if .Site.Params.github }}
+            <a href="{{ .Site.Params.github }}" target="_blank" rel="noopener"><img class="icon" src="/img/github.svg" alt="github" /></a>
         {{ end }}
 
-        {{ if .Site.Params.LinkedIn }}
-            <a href="{{ .Site.Params.LinkedIn }}" target="_blank">
-                <i class="icon ion-social-linkedin"></i>
-            </a>
+        {{ if .Site.Params.twitter }}
+            <a href="{{ .Site.Params.twitter }}" target="_blank" rel="noopener"><img class="icon" src="/img/twitter.svg" alt="twitter" /></a>
         {{ end }}
 
-        {{ if .Site.Params.Facebook }}
-            <a href="{{ .Site.Params.Facebook }}" target="_blank">
-                <i class="icon ion-social-facebook larger"></i>
-            </a>
+        {{ if .Site.Params.mastodon }}
+            <a href="{{ .Site.Params.mastodon }}" target="_blank" rel="noopener"><img class="icon" src="/img/mastodon.svg" alt="mastodon" /></a>
         {{ end }}
 
-        {{ if .Site.Params.SoundCloud }}
-            <a href="{{ .Site.Params.SoundCloud }}" target="_blank">
-                <i class="icon ion-ios-musical-notes larger"></i>
-            </a>
+        {{ if .Site.Params.linkedin }}
+            <a href="{{ .Site.Params.linkedin }}" target="_blank" rel="noopener"><img class="icon" src="/img/linkedin.svg" alt="linkedin" /></a>
         {{ end }}
 
-        {{ if .Site.Params.Email }}
-            <a href="mailto:{{ .Site.Params.Email }}">
-                <i class="icon ion-ios-email larger"></i>
-            </a>
+        {{ if .Site.Params.facebook }}
+            <a href="{{ .Site.Params.facebook }}" target="_blank" rel="noopener"><img class="icon" src="/img/facebook.svg" alt="facebook" /></a>
+        {{ end }}
+
+        {{ if .Site.Params.instagram }}
+            <a href="{{ .Site.Params.instagram }}" target="_blank" rel="noopener"><img class="icon" src="/img/instagram.svg" alt="instagram" /></a>
+        {{ end }}
+            
+        {{ if .Site.Params.px500 }}
+            <a href="{{ .Site.Params.px500 }}" target="_blank" rel="noopener"><img class="icon" src="/img/500px.svg" alt="500px" /></a>
+        {{ end }}
+
+        {{ if .Site.Params.soundcloud }}
+            <a href="{{ .Site.Params.soundcloud }}" target="_blank" rel="noopener"><img class="icon" src="/img/soundcloud.svg" alt="soundcloud" /></a>
+        {{ end }}
+
+        {{ if .Site.Params.email }}
+            <a href="mailto:{{ .Site.Params.email }}"><img class="icon" src="/img/email.svg" alt="email" /></a>
+        {{ end }}
+
+        {{ if .Site.RSSLink }}
+            <a href="{{ .Site.RSSLink }}"><img class="icon" src="/img/rss.svg" alt="rss" /></a>
+        {{ end }}
+        {{ if and .Site.Params.i18n_flags .IsTranslated }}
+            {{ range .Translations }}
+                <a href="{{ .Permalink }}"><img class="icon flag" src="/img/flags/{{ .Lang }}.svg"></a>
+            {{ end }}
         {{ end }}
         </div>
     </div>
