--- a/themes/cocoa/static/css/main.css
+++ b/themes/cocoa/static/css/main.css
@@ -1,7 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700);
-@import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,400italic,700,700italic);
-@import url(https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
-@import url(https://fonts.googleapis.com/css?family=Raleway:500);
 .dark {
   color: #333 !important;
 }
@@ -76,9 +72,6 @@ body {
     padding-top: 0 !important;
   }
 }
-.icon {
-  text-rendering: geometricPrecision !important;
-}
 section {
   display: -webkit-flex;
   display: -moz-flex;
@@ -101,6 +94,9 @@ section {
   display: -ms-flexbox;
   display: -ms-flex;
   display: flex;
+  width: 100%;
+}
+.container .content {
   width: 100%;
 }
 @media (min-width: 600px) {
@@ -177,17 +173,35 @@ section.header .content {
   -ms-align-items: center;
   align-items: center;
 }
+section.header .avatar {
+  border-radius: 50%;
+  box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.2);
+  max-width: 50px;
+}
 section.header .name {
   font-size: 18px;
   font-family: 'Raleway', 'Helvetica Neue', 'Arial', sans-serif;
   letter-spacing: -0.005rem;
-  text-transform: uppercase;
   font-weight: 700;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   font-smoothing: antialiased;
   color: #333;
+  text-transform: uppercase;
   color: #555;
+}
+section.header h3.self-intro {
+  font-size: 1em;
+  font-family: 'Raleway', 'Helvetica Neue', 'Arial', sans-serif;
+  letter-spacing: -0.005rem;
+  font-weight: 700;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  font-smoothing: antialiased;
+  color: #333;
+  font-weight: 400;
+  color: #555;
+  margin-bottom: 1rem;
 }
 section.header nav {
   font-size: 14px;
@@ -204,14 +218,17 @@ section.header nav ul {
   display: -ms-inline-flex;
   display: inline-flex;
 }
-section.header nav ul li a {
+section.header nav ul li {
   margin-left: 6px;
   margin-right: 6px;
 }
-section.header nav ul li a:first-child {
+section.header nav ul li:first-child {
   margin-left: 0;
-} 
-section.header nav ul li {
+}
+section.header nav ul li:last-child {
+  margin-right: 0;
+}
+section.header nav ul a {
   color: #555;
   font-weight: 500;
   -webkit-transition: color 0.1s cubic-bezier(0.47, 0, 0.75, 0.72);
@@ -219,7 +236,7 @@ section.header nav ul li {
   -ms-transition: color 0.1s cubic-bezier(0.47, 0, 0.75, 0.72);
   -o-transition: color 0.1s cubic-bezier(0.47, 0, 0.75, 0.72);
 }
-section.header nav ul li:hover {
+section.header nav ul a:hover {
   color: #111;
 }
 @media (min-width: 600px) {
@@ -248,10 +265,10 @@ section.header nav ul li:hover {
   section.header nav ul {
     text-align: left;
   }
-  section.header nav ul li {
+  section.header nav ul a {
     color: #666;
   }
-  section.header nav ul li:hover {
+  section.header nav ul a:hover {
     color: #333;
   }
 }
@@ -268,14 +285,17 @@ section.icons .container {
   -ms-justify-content: center;
   justify-content: center;
 }
+section.icons .content {
+  width: auto;
+}
 section.icons .content a {
   margin-left: 6px;
   margin-right: 6px;
-  color: #555;
-  -webkit-transition: color 0.1s cubic-bezier(0.47, 0, 0.75, 0.72);
-  -moz-transition: color 0.1s cubic-bezier(0.47, 0, 0.75, 0.72);
-  -ms-transition: color 0.1s cubic-bezier(0.47, 0, 0.75, 0.72);
-  -o-transition: color 0.1s cubic-bezier(0.47, 0, 0.75, 0.72);
+  opacity: 0.6;
+  -webkit-transition: opacity 0.1s cubic-bezier(0.47, 0, 0.75, 0.72);
+  -moz-transition: opacity 0.1s cubic-bezier(0.47, 0, 0.75, 0.72);
+  -ms-transition: opacity 0.1s cubic-bezier(0.47, 0, 0.75, 0.72);
+  -o-transition: opacity 0.1s cubic-bezier(0.47, 0, 0.75, 0.72);
 }
 section.icons .content a:first-child {
   margin-left: 0;
@@ -284,13 +304,14 @@ section.icons .content a:last-child {
   margin-right: 0;
 }
 section.icons .content a:hover {
-  color: #111;
+  opacity: 0.8;
 }
 section.icons .content a .icon {
-  font-size: 20px;
+  width: 16px;
+  height: 16px;
 }
-section.icons .content a .icon.larger {
-  font-size: 22px;
+section.icons .content a .flag {
+  border-radius: 50%;
 }
 @media (min-width: 600px) {
   section.icons {
@@ -305,16 +326,6 @@ section.icons .content a .icon.larger {
   section.icons .content a {
     margin-left: 3px;
     margin-right: 3px;
-    color: #666;
-  }
-  section.icons .content a:hover {
-    color: #333;
-  }
-  section.icons .content a .icon {
-    font-size: 18px;
-  }
-  section.icons .content a .icon.larger {
-    font-size: 20px;
   }
 }
 section.main .container {
@@ -347,12 +358,12 @@ section.main .content .title-container .initials {
   font-size: 18px;
   font-family: 'Raleway', 'Helvetica Neue', 'Arial', sans-serif;
   letter-spacing: -0.005rem;
-  text-transform: uppercase;
   font-weight: 700;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   font-smoothing: antialiased;
   color: #333;
+  text-transform: uppercase;
   color: #666;
 }
 section.main .content .title-container .initials a {
@@ -369,19 +380,18 @@ section.main .content .page-heading {
   font-size: 18px;
   font-family: 'Raleway', 'Helvetica Neue', 'Arial', sans-serif;
   letter-spacing: -0.005rem;
-  text-transform: uppercase;
   font-weight: 700;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   font-smoothing: antialiased;
   color: #333;
+  text-transform: uppercase;
   margin-bottom: 16px;
 }
 section.main .content .front-matter .page-heading {
   margin-bottom: 0;
 }
 section.main .content .front-matter .meta {
-  font-size: 14px;
   color: #666;
   display: -webkit-flex;
   display: -moz-flex;
@@ -479,12 +489,29 @@ section.main .container .content .post-item {
   list-style: disc inside;
 }
 section.main .container .content .post-item .meta {
-  font-size: 14px;
   color: #666;
   display: none;
   min-width: 100px;
   text-align: right;
   margin-right: 16px;
+}
+section.main .container .content .no-bullet {
+  color: transparent;
+  font-style: oblique;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
+section.main .container .content .no-bullet .date {
+  font-size: 18px;
+  font-family: 'Raleway', 'Helvetica Neue', 'Arial', sans-serif;
+  letter-spacing: -0.005rem;
+  font-weight: 700;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  font-smoothing: antialiased;
+  color: #333;
+  color: #666 !important;
+  font-style: normal;
 }
 section {
   padding: 0 16px;
@@ -563,7 +590,6 @@ section.main .content .markdown h6 {
   font-size: 18px;
   font-family: 'Raleway', 'Helvetica Neue', 'Arial', sans-serif;
   letter-spacing: -0.005rem;
-  text-transform: uppercase;
   font-weight: 700;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
@@ -581,7 +607,7 @@ section.main .content .markdown h2 {
   margin-bottom: 1.5rem;
 }
 section.main .content .markdown h3 {
-  font-size: 1em;
+  font-size: 1rem;
   margin-bottom: 1rem;
 }
 section.main .content .markdown h4,
@@ -590,12 +616,11 @@ section.main .content .markdown h6 {
   font-size: 1rem;
   margin-bottom: 1rem;
   letter-spacing: none;
-  text-transform: none;
 }
 section.main .content .markdown code,
 section.main .content .markdown pre {
   font-family: 'Ubuntu Mono', 'Menlo', monospace;
-  font-size: 0.98rem;
+  font-size: 1rem;
   background-color: #f7f7f7;
 }
 section.main .content .markdown code {
@@ -616,9 +641,9 @@ section.main .content .markdown pre {
   word-wrap: break-word;
 }
 section.main .content .markdown pre code {
-  /* enclosed by 4 backticks (````) */
+  /* enclosed by 3 backticks (```) */
   padding: 0;
-  font-size: 0.9rem;
+  font-size: 1rem;
 }
 section.main .content .markdown a code {
   color: #428bca !important;
@@ -647,9 +672,15 @@ section.main .content .markdown dd {
 section.main .content .markdown ul {
   margin-bottom: 1.25rem;
 }
-section.main .content .markdown li {
+section.main .content .markdown ul li {
   list-style-type: disc;
-  list-style-position: inside;
+}
+section.main .content .markdown ol li {
+  list-style-type: decimal;
+}
+section.main .content .markdown li {
+  list-style-position: outside;
+  margin-left: 1em;
 }
 section.main .content .markdown em {
   font-style: italic;
