Limit first 5 posts:

--- a/themes/kondo/layouts/index.html
+++ b/themes/kondo/layouts/index.html
@@ -22,7 +22,7 @@
     <ul>
 
     </ul>
-    {{ range .Pages.ByPublishDate.Reverse }}
+    {{ range first 5 (where .Pages "Section" "post")}}
     <li>
         <a href="{{ .Permalink }}">{{ .Title | markdownify }}</a>
     </li>
