--- a/themes/kondo/layouts/_default/single.html
+++ b/themes/kondo/layouts/_default/single.html
@@ -1,5 +1,8 @@
 {{- define "main" -}}
 <a href="{{ .Site.BaseURL }}">Home</a>
-<h1>{{ .Title | markdownify }}</h1>
+<header>
+    <h1>{{ .Title | markdownify }}</h1>
+    <p class="header-date">{{ .PublishDate.Format "January 2, 2006" }}</p>
+</header>
 {{ .Content }}
 {{- end -}}
