Add feather.js icons

--- a/themes/kondo/layouts/index.html
+++ b/themes/kondo/layouts/index.html
@@ -2,9 +2,15 @@
 <div class="main">
     <h1>Khoi Lai</h1>
     <p>An engineer who's into Swift and Go.</p>
-    <ul>
-        <li><a href="https://github.com/khoi">GitHub</a></li>
-        <li><a href="https://twitter.com/khoiracle">Twitter</a></li>
+    <ul style="list-style-type: none;">
+        <li>
+            <i data-feather="github"></i>
+            <a href="https://github.com/khoi">GitHub</a>
+        </li>
+        <li>
+            <i data-feather="twitter"></i>
+            <a href="https://twitter.com/khoiracle">Twitter</a>
+        </li>
     </ul>
     <h2>Posts</h2>
     <ul>
