--- a/themes/kondo/layouts/partials/head.html
+++ b/themes/kondo/layouts/partials/head.html
@@ -1,28 +1,33 @@
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="{{ .Site.Author.name }}" />
-    <meta property="og:url" content="{{ .Permalink }}" />
-    <link rel="canonical" href="{{ .Permalink }}" />
-    {{- if .Site.Params.favicon -}}
-    <link rel="shortcut icon" href="{{ .Site.Params.favicon }}" type="image/x-png" />
-    {{- end -}}
-    <link rel="stylesheet" href="{{ "css/main.css" | relURL }}">
-    <link href="{{ "index.xml" | relURL }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}">
-    <link rel="stylesheet"
-      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.14.2/styles/default.min.css">
-    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.14.2/highlight.min.js"></script>
-    <script>hljs.initHighlightingOnLoad();</script>
-    {{- if .IsHome -}}
-    <title>{{ .Site.Title }}</title>
-    <meta property="og:title" content="{{ .Site.Title }}" />
-    <meta property="og:type" content="website" />
-    <meta name="description" content="{{ .Site.Params.description }}" />
-    {{- else -}}
-    <title>{{ .Title }} - {{ .Site.Title }}</title>
-    <meta property="og:title" content="{{ .Title }} - {{ .Site.Title }}" />
-    <meta property="og:type" content="article" />
-    <meta name="description" content="{{ default .Summary .Description }}" />
-    {{- end }}
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="author" content="{{ .Site.Author.name }}" />
+  <meta property="og:url" content="{{ .Permalink }}" />
+  <link rel="canonical" href="{{ .Permalink }}" />
+  {{- if .Site.Params.favicon -}}
+  <link rel="shortcut icon" href="{{ .Site.Params.favicon }}" type="image/x-png" />
+  {{- end -}}
+  <link rel="stylesheet" href="{{ "css/main.css" | relURL }}">
+  <link href="{{ "index.xml" | relURL }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}">
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.14.2/styles/default.min.css">
+  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.14.2/highlight.min.js"></script>
+  <script>hljs.initHighlightingOnLoad();</script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.17.0/feather.min.js"></script>
+  <script>
+    document.addEventListener("DOMContentLoaded", function (event) {
+      feather.replace();
+    });
+  </script>
+  {{- if .IsHome -}}
+  <title>{{ .Site.Title }}</title>
+  <meta property="og:title" content="{{ .Site.Title }}" />
+  <meta property="og:type" content="website" />
+  <meta name="description" content="{{ .Site.Params.description }}" />
+  {{- else -}}
+  <title>{{ .Title }} - {{ .Site.Title }}</title>
+  <meta property="og:title" content="{{ .Title }} - {{ .Site.Title }}" />
+  <meta property="og:type" content="article" />
+  <meta name="description" content="{{ default .Summary .Description }}" />
+  {{- end }}
 </head>
