--- a/themes/kondo/layouts/partials/head.html
+++ b/themes/kondo/layouts/partials/head.html
@@ -10,10 +10,11 @@
   {{- end -}}
   <link rel="stylesheet" href="{{ "css/main.css" | relURL }}">
   <link href="{{ "index.xml" | relURL }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}">
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.14.2/styles/default.min.css">
-  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.14.2/highlight.min.js"></script>
+  <link rel="stylesheet"
+  href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.14.2/build/styles/default.min.css">
+  <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.14.2/build/highlight.min.js"></script>
   <script>hljs.initHighlightingOnLoad();</script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.17.0/feather.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/feather-icons@4.17.0/dist/feather.min.js"></script>
   <script>
     document.addEventListener("DOMContentLoaded", function (event) {
       feather.replace();
