--- a/themes/kondo/layouts/index.html
+++ b/themes/kondo/layouts/index.html
@@ -20,5 +20,10 @@
     </li>
     {{ end }}
     </ul>
+    <h2>Projects</h2>
+    <ul>
+      <li><a href="https://github.com/khoi/compass">compass</a> - a z insipred shell ultility written in Go.</li>
+      <li><a href="https://github.com/zalora/swift-statsd-client">swift-statsd-client</a> - StatsD client written in Swift.</li>
+    </ul>
 </div>
 {{ end }}
