--- a/themes/kondo/layouts/partials/head.html
+++ b/themes/kondo/layouts/partials/head.html
@@ -21,7 +21,10 @@
   href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.14.2/build/styles/default.min.css">
   <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.14.2/build/highlight.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.14.2/build/languages/go.min.js"></script>
-  <script>hljs.initHighlightingOnLoad();</script>
+  <script>
+    hljs.configure({tabReplace: '    '});
+    hljs.initHighlightingOnLoad();
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/feather-icons@4.17.0/dist/feather.min.js"></script>
   <script>
     document.addEventListener("DOMContentLoaded", function (event) {
