--- a/themes/kondo/layouts/_default/single.html
+++ b/themes/kondo/layouts/_default/single.html
@@ -7,6 +7,7 @@
 {{ .Content }}
 <footer>
     <hr>
+    <p>If you like or have feedback on the post, or just want to say hi, tweet me <a href="https://twitter.com/khoiracle"><strong>@khoiracle</strong></a></p>
     <ul>
         <li><a href="{{ .Site.BaseURL }}">Home</a></li>
     </ul>
