know your audience

--- a/themes/kondo/layouts/partials/head.html
+++ b/themes/kondo/layouts/partials/head.html
@@ -42,4 +42,12 @@
   <meta property="og:type" content="article" />
   <meta name="description" content="{{ default .Summary .Description }}" />
   {{- end }}
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-134998193-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-134998193-1');
+  </script>
 </head>
