--- a/themes/kondo/layouts/index.html
+++ b/themes/kondo/layouts/index.html
@@ -20,6 +20,15 @@
     </li>
     {{ end }}
     </ul>
+    <h2>Favorite tools</h2>
+    <p>listed in no particular order</p>
+    <ul>
+      <li>git</li>
+      <li><a href="https://neovim.io/">neovim</a></li>
+      <li><a href="https://www.aersf.com/tech-pack-black">aer tech pack</a> - my daily driver backpack</li>
+      <li><a href="https://www.bose.com/en_us/products/headphones/over_ear_headphones/quietcomfort-35-wireless-ii.html">Bose QC35</a> - essential for working at a coffee shop.</li>
+      <li><a href="https://www.apple.com/macbook-pro/">MBP 15</a> - I'd love it more if it didn't break twice a year.</li>
+    </ul>
     <h2>Projects</h2>
     <ul>
       <li><a href="https://github.com/khoi/compass">compass</a> - a z insipred shell ultility written in Go.</li>
