--- a/themes/kondo/layouts/index.html
+++ b/themes/kondo/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <div class="main">
-    <h1>Hi, It's Khoi!</h1>
+    <h1>Hi, it's Khoi!</h1>
     <p>An engineer who's into Swift and Go.</p>
     <ul style="list-style-type: none;">
         <li>
