--- a/themes/kondo/layouts/index.html
+++ b/themes/kondo/layouts/index.html
@@ -23,7 +23,7 @@
     <h2>Favorite tools</h2>
     <p>listed in no particular order</p>
     <ul>
-      <li>git</li>
+      <li>git - solid software that is usually taken for granted.</li>
       <li><a href="https://neovim.io/">neovim</a></li>
       <li><a href="https://www.aersf.com/tech-pack-black">aer tech pack</a> - my daily driver backpack, perfect for Saigon's rainy weather.</li>
       <li><a href="https://www.bose.com/en_us/products/headphones/over_ear_headphones/quietcomfort-35-wireless-ii.html">Bose QC35</a> - essential for working at a coffee shop.</li>
