--- a/themes/khoi/layouts/index.html
+++ b/themes/khoi/layouts/index.html
@@ -11,6 +11,10 @@
             <i data-feather="twitter"></i>
             <a href="https://twitter.com/khoiracle">Twitter</a>
         </li>
+        <li>
+            <i data-feather="rss"></i>
+            <a href="/index.xml">RSS</a>
+        </li>
     </ul>
     <h2>Posts</h2>
     <ul>
