--- a/themes/khoi/layouts/index.html
+++ b/themes/khoi/layouts/index.html
@@ -12,6 +12,10 @@
             <a href="https://twitter.com/khoiracle">Twitter</a>
         </li>
         <li>
+            <i data-feather="send"></i>
+            <a href="https://t.me/khoiracle">Telegram</a>
+        </li>
+        <li>
             <i data-feather="rss"></i>
             <a href="/index.xml">RSS</a>
         </li>
