--- a/themes/khoi/static/css/main.css
+++ b/themes/khoi/static/css/main.css
@@ -9,7 +9,16 @@ body {
 
 .main {
     max-width: 700px;
-    margin: 50px auto 50px
+    margin: 0px auto 50px;
+}
+
+.nav-bar {
+    max-width: 700px;
+    margin: 50px auto 0px;
+}
+
+.nav-bar-link {
+    font-size: 20px;
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -40,12 +49,12 @@ pre {
 }
 
 a:link {
-    color: #000;
+    color: #222;
     text-decoration: underline
 }
 
 a:visited {
-    color: #000
+    color: #222
 }
 
 a:hover {
