--- a/themes/khoi/layouts/index.html
+++ b/themes/khoi/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
     <h1>Hi, it's Khoi!</h1>
-    <p>An engineer who's into Swift and Go.</p>
+    <p>A software engineer who's into minimalism, so Golang.</p>
     <ul style="list-style-type: none;">
         <li>
             <i data-feather="github"></i>
