--- a/themes/khoi/layouts/index.html
+++ b/themes/khoi/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
     <h1>Hi, it's Khoi!</h1>
-    <p>A software engineer who's into minimalism, so Golang.</p>
+    <p>I'm an 0.5x engineer on a good day.</p>
     <ul style="list-style-type: none;">
         <li>
             <i data-feather="github"></i>
