--- a/themes/khoi/layouts/index.html
+++ b/themes/khoi/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
     <h1>Hi, it's Khoi!</h1>
-    <p>I currently live in HCM City, Vietnam. I write software, and enjoy ranting about programing languages over 🍺.</p>
+    <p>I currently live in HCM City, Vietnam. I write software, and enjoy ranting about programing languages over 🍺. You can find me on:</p>
     <ul style="list-style-type: none;">
         <li>
             <i data-feather="github"></i>
