--- a/themes/khoi/layouts/index.html
+++ b/themes/khoi/layouts/index.html
@@ -29,7 +29,7 @@
     </ul>
     <h2>Projects</h2>
     <ul>
-      <li><a href="https://github.com/khoi/compass">compass</a> - a z insipred shell ultility written in Go.</li>
-      <li><a href="https://github.com/zalora/swift-statsd-client">swift-statsd-client</a> - StatsD client written in Swift.</li>
+      <li>🌈<a href="https://imgur.com/a/VQxl1ol">Sorting Algorithms Visualization</a></li>
+      <li>🧭<a href="https://github.com/khoi/compass">compass</a> - a z insipred shell ultility written in Go.</li>
     </ul>
 {{ end }}
