--- a/themes/khoi/layouts/_default/single.html
+++ b/themes/khoi/layouts/_default/single.html
@@ -7,7 +7,7 @@
 {{ .Content }}
 <footer>
     <hr>
-    <p>If you have feedback, or simply just want to say hi, drop me a tweet <a href="https://twitter.com/khoiracle"><strong>@khoiracle</strong></a>.</p>
+    <p>If you have any feedback, or simply just want to say hi, drop me a tweet <a href="https://twitter.com/khoiracle"><strong>@khoiracle</strong></a>.</p>
     <ul>
         <li><a href="{{ .Site.BaseURL }}">Home</a></li>
     </ul>
