--- a/themes/khoi/layouts/index.html
+++ b/themes/khoi/layouts/index.html
@@ -31,6 +31,7 @@
     {{ end }}
     <h2>Projects</h2>
     <ul>
+      <li>🍅<a href="https://github.com/khoi/pomo">Focus - Pomodoro Timer written in SwiftUI</a></li>
       <li>🌈<a href="https://imgur.com/a/VQxl1ol">Sorting Algorithms Visualization</a></li>
       <li>🧭<a href="https://github.com/khoi/compass">compass</a> - a z insipred shell ultility written in Go.</li>
     </ul>
